--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma genarate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "4.2.1",
-    "next": "12.2.4",
+    "next": "^14.2.5",
+    "postcss": "^8.4.41",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -21,7 +22,6 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
-    "postcss": "^8.4.16",
     "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
