--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma genarate && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "4.2.1",
+    "@prisma/client": "^5.18.0",
     "next": "^14.2.5",
     "postcss": "^8.4.41",
     "react": "18.2.0",
@@ -22,7 +22,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
-    "prisma": "^4.2.1",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
