--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "argon2": "^0.40.3",
     "next": "^14.2.5",
+    "nodemailer": "^6.9.14",
     "postcss": "^8.4.41",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "18.7.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
